# spend-governor

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
data/evals/: hold.json  lab_account_question.json  lab_docs_bot.json  lab_password_reset.json  lab_refund_auditor.json  lab_refund_handling.json  lab_sales_assistant.json  lab_support_copilot.json  trip.json
doc/: architecture.md  control-plane-inventory.md  cost-model.md  development.md  instrumentation-schema.md  observed-agent.md  phoenix-pricing-config.md  realtime-pipeline.md
examples/: accountant-report.json  margin-input.example.json  observed-agent-config.json
infra/: README.md  deploy.sh  entrypoint.sh  teardown.sh
scripts/: reset-db.sh  start-cockpit.sh
src/accountant/: agent.py  analysis.py  backfill.py  dashboard.py  db.py  detection.py  ingest_server.py  inspect_traces.py  main.py  reasoning.py  recommendations.py  savings.py  tools.py  verification.py  verify_cost.py  worker.py
src/accountant/analytics/: agent_tools.py  analysis.py  detection.py  experiments.py  quality_eval.py  reasoning.py  recommendations.py  verification.py
src/accountant/api/: ask.py  governor.py  scenario.py  server.py
src/accountant/margin/: agent.py  (+5 more)
src/governor/: agent.py  cache.py  governor.py  store.py
src/observed/: accountant_exporter.py  agent.py  config.py  fleet.py  generate_dataset.py  main.py  telemetry.py  tools.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx
(+60 files in other folders)
