[project]
name = "agent-accountant"
version = "0.1.0"
description = "Unit economics for AI agents."
requires-python = ">=3.10"
dependencies = [
    "google-adk",
    "arize-phoenix-otel",
    "openinference-instrumentation-google-adk",
    "python-dotenv",
    "arize-phoenix-client>=2.7.0",
    "pandas>=2.3.3",
    "mcp>=1.27.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observed", "src/accountant"]
